# odv_tools

./: CMakeLists.txt
desperados_instrumentation/injected/: Makefile.win  dbg.cpp  dbg.h  ddproxy.cpp  ddproxy.h  hook.cpp  hook.h  injected.h  instruvm.cpp  instruvm.h  main.cpp  pestuff.cpp  pestuff.h
desperados_instrumentation/injected/dep/inc/: ddraw.h  winapifamily.h
desperados_instrumentation/injected/dep/lib/: dxguid.lib
desperados_instrumentation/injector/: Makefile.win  injector.c
ida_script/: helper_external_VM_func.py
metasm_script/: extract_elm_info.rb
python/: odv_dvm_test.py  odv_fnt_test.py  odv_map_test.py  odv_pak_test.py  odv_utils.py  test_dvm.py  test_pak.py  test_scrp.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ODVFile.c  odv_file.c  odv_file.h  odv_file_stream.h  unix_odv_file_stream.c  win_odv_file_stream.c
src/resources/: CMakeLists.txt  odv_resource_handler.c  odv_resource_handler.h
src/test/: odv_test.c
